--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="styles/custom.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
+
 <body>
 	<div class="container mt-5">
 		<h1><b>Namensgenerator</b></h1>
@@ -43,6 +44,13 @@
 							<option id="halfOrc">Halbork</option>
 							<option id="dragonborn">Drachenblütiger</option>
 							<option id="tiefling">Tiefling</option>
+							<option id="aasimar">Aasimar</option>
+							<option id="lizardfolk">Echsenmensch</option>
+							<option id="firbolg">Firbolg</option>
+							<option id="goliath">Goliath</option>
+							<option id="kenku">Kenku</option>
+							<option id="tabaxi">Tabaxi</option>
+							<option id="triton">Triton</option>
 						</select>
 					</div>
 				</div>
@@ -106,7 +114,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	
+
 
 	<!--Scripts for generating the author's first name -->
 	<script src="scripts/names/first_name/generateRandomFirstNameDragonbornFemale.js"></script>
@@ -133,6 +141,13 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameTieflingFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameTieflingMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameTieflingNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameLizardfolk.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGoliath.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameKenku.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameTabaxi.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameTritonFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameTritonMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameTritonNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -149,7 +164,6 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleRomanesque.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleScandinavian.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleSlavic.js"></script>
-
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanFemaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanFemaleBantu.js"></script>
@@ -183,6 +197,21 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanNonBinaryScandinavian.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanNonBinarySlavic.js"></script>
 
+	<!--Scripts for generating the last name -->
+	<script src="scripts/names/last_name/generateRandomLastNameDragonborn.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameDwarf.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameElf.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameGnome.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameHalfling.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameHalfOrc.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameHuman.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameLizardfolk.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameFirbolg.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameGoliath.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameKenku.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameTabaxi.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameTriton.js"></script>
+
 	<script src="scripts/names/last_name/generateRandomLastNameHumanArabic.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHumanBantu.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHumanCeltic.js"></script>
@@ -208,15 +237,12 @@
 	<script src="scripts/names/syllables_name/halfOrcNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/humanNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tieflingNameSyllables.js"></script>
-
-	<!--Scripts for generating the last name -->
-	<script src="scripts/names/last_name/generateRandomLastNameDragonborn.js"></script>
-	<script src="scripts/names/last_name/generateRandomLastNameDwarf.js"></script>
-	<script src="scripts/names/last_name/generateRandomLastNameElf.js"></script>
-	<script src="scripts/names/last_name/generateRandomLastNameGnome.js"></script>
-	<script src="scripts/names/last_name/generateRandomLastNameHalfling.js"></script>
-	<script src="scripts/names/last_name/generateRandomLastNameHalfOrc.js"></script>
-	<script src="scripts/names/last_name/generateRandomLastNameHuman.js"></script>
+	<script src="scripts/names/syllables_name/lizardfolkNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/firbolgNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/goliathNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/kenkuNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/tabaxiNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/tritonNameSyllables.js"></script>
 
 	<script src="scripts/names/generateFirstName.js"></script>
 	<script src="scripts/names/generateLastName.js"></script>
@@ -224,7 +250,7 @@
 	<script src="scripts/names/generateRandomGender.js"></script>
 	<script src="scripts/names/generateRandomRace.js"></script>
 	<script src="scripts/names/generateRandomRegion.js"></script>
-	
+
 	<script src="scripts/getRandomElement.js"></script>
 	<script src="scripts/interface/eventListener.js"></script>
 </body>
