--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 							<option id="dragonborn">Drachenblütiger</option>
 							<option id="tiefling">Tiefling</option>
 							<option id="aasimar">Aasimar</option>
+							<option id="aasimar">Aarakocra</option>
 							<option id="lizardfolk">Echsenmensch</option>
 							<option id="firbolg">Firbolg</option>
 							<option id="goliath">Goliath</option>
@@ -141,6 +142,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameTieflingFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameTieflingMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameTieflingNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameAarakocra.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameLizardfolk.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGoliath.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameKenku.js"></script>
@@ -205,6 +207,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameHalfling.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHalfOrc.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHuman.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameAarakocra.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameLizardfolk.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameFirbolg.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGoliath.js"></script>
@@ -237,6 +240,7 @@
 	<script src="scripts/names/syllables_name/halfOrcNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/humanNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tieflingNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/aarakocraNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/lizardfolkNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/firbolgNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/goliathNameSyllables.js"></script>
