--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 
-
 <body>
 	<div class="container mt-5">
 		<h1><b>Namensgenerator</b></h1>
@@ -44,7 +43,8 @@
 							<option id="halfElf">Halbelf</option>
 							<option id="halfOrc">Halbork</option>
 							<option id="dragonborn">Drachenblütiger</option>
-							<option id="tiefling">Tiefling</option>							<option id="aasimar">Aasimar</option>
+							<option id="tiefling">Tiefling</option>
+							<option id="aasimar">Aasimar</option>
 							<option id="aasimar">Aarakocra</option>
 							<option id="lizardfolk">Echsenmensch</option>
 							<option id="firbolg">Firbolg</option>
