--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 							<option id="tiefling">Tiefling</option>
 							<option id="aasimar">Aasimar</option>
 							<option id="aasimar">Aarakocra</option>
+							<option id="aasimar">Duergar</option>							
 							<option id="lizardfolk">Echsenmensch</option>
 							<option id="firbolg">Firbolg</option>
+							<option id="aasimar">Githyanki</option>
 							<option id="goliath">Goliath</option>
 							<option id="kenku">Kenku</option>
 							<option id="tabaxi">Tabaxi</option>
@@ -142,6 +144,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameTieflingMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameTieflingNonBinary.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameAarakocra.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGithyankiFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGithyankiMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGithyankiNonBinary.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameLizardfolk.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGoliath.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameKenku.js"></script>
@@ -207,6 +212,8 @@
 	<script src="scripts/names/last_name/generateRandomLastNameHalfOrc.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHuman.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameAarakocra.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameDuergar.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameGithyanki.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameLizardfolk.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameFirbolg.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGoliath.js"></script>
@@ -240,12 +247,15 @@
 	<script src="scripts/names/syllables_name/humanNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tieflingNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/aarakocraNamesSyllables.js"></script>
+	<script src="scripts/names/syllables_name/duergarNamesSyllables.js"></script>
+	<script src="scripts/names/syllables_name/githyankiNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/lizardfolkNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/firbolgNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/goliathNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/kenkuNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tabaxiNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tritonNameSyllables.js"></script>
+
 
 	<script src="scripts/names/generateFirstName.js"></script>
 	<script src="scripts/names/generateLastName.js"></script>
