Added Githzerai as a race

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 							<option id="dragonborn">Drachenblütiger</option>
 							<option id="tiefling">Tiefling</option>
 							<option id="aasimar">Aasimar</option>
-							<option id="aasimar">Aarakocra</option>
-							<option id="aasimar">Duergar</option>							
+							<option id="aarakocra">Aarakocra</option>
+							<option id="duergar">Duergar</option>
 							<option id="lizardfolk">Echsenmensch</option>
 							<option id="firbolg">Firbolg</option>
-							<option id="aasimar">Githyanki</option>
+							<option id="githyanki">Githyanki</option>
+							<option id="githzerai">Githzerai</option>
 							<option id="goliath">Goliath</option>
 							<option id="kenku">Kenku</option>
 							<option id="tabaxi">Tabaxi</option>
@@ -147,6 +148,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameGithyankiFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGithyankiMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGithyankiNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGithzeraiFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGithzeraiMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGithzeraiNonBinary.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameLizardfolk.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGoliath.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameKenku.js"></script>
@@ -214,6 +218,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameAarakocra.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameDuergar.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGithyanki.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameGithzerai.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameLizardfolk.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameFirbolg.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGoliath.js"></script>
@@ -249,6 +254,7 @@
 	<script src="scripts/names/syllables_name/aarakocraNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/duergarNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/githyankiNamesSyllables.js"></script>
+	<script src="scripts/names/syllables_name/githzeraiNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/lizardfolkNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/firbolgNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/goliathNameSyllables.js"></script>
