Added Bugbears, Goblins and Hobgoblins as selectable races

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 							<option id="firbolg">Firbolg</option>
 							<option id="githyanki">Githyanki</option>
 							<option id="githzerai">Githzerai</option>
+							<option id="goblin">Goblin</option>
 							<option id="goliath">Goliath</option>
+							<option id="bugbear">Grottenschrat</option>
+							<option id="hobgoblin">Hobgoblin</option>
 							<option id="kenku">Kenku</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
@@ -158,6 +161,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameTritonFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameTritonMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameTritonNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGoblinoidFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGoblinoidMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGoblinoidNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -211,6 +217,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameDragonborn.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameDwarf.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameElf.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameGoblinoid.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGnome.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHalfling.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHalfOrc.js"></script>
@@ -255,6 +262,7 @@
 	<script src="scripts/names/syllables_name/duergarNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/githyankiNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/githzeraiNamesSyllables.js"></script>
+	<script src="scripts/names/syllables_name/goblinoidNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/lizardfolkNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/firbolgNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/goliathNameSyllables.js"></script>
