--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 							<option id="goliath">Goliath</option>
 							<option id="bugbear">Grottenschrat</option>
 							<option id="hobgoblin">Hobgoblin</option>
+							<option id="kalasthar">Kalashtar</option>
 							<option id="kenku">Kenku</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
@@ -164,6 +165,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameGoblinoidFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGoblinoidMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGoblinoidNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameKalashtar.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -229,6 +231,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameLizardfolk.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameFirbolg.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGoliath.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameKalashtar.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameKenku.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTabaxi.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTriton.js"></script>
@@ -266,6 +269,7 @@
 	<script src="scripts/names/syllables_name/lizardfolkNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/firbolgNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/goliathNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/kalashtarNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/kenkuNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tabaxiNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tritonNameSyllables.js"></script>
