Added Warforged as selectable race

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 							<option id="grung">Grung</option>
 							<option id="hobgoblin">Hobgoblin</option>
 							<option id="kalasthar">Kalashtar</option>
+							<option id="warforged">Kriegsgeschmiedeter</option>
 							<option id="kenku">Kenku</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
@@ -123,6 +124,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
+	<!-- General scripts -->
+	<script src="scripts/names/addNameDescription.js"></script>
+	<script src="scripts/interface/eventListener.js"></script>
+	<script src="scripts/getRandomElement.js"></script>
 
 	<!--Scripts for generating the first name -->
 	<script src="scripts/names/first_name/generateRandomFirstNameDragonbornFemale.js"></script>
@@ -167,6 +172,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameGoblinoidMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGoblinoidNonBinary.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameKalashtar.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameWarforged.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGrung.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
@@ -252,6 +258,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameGoliath.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameGrung.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameKalashtar.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameWarforged.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameKenku.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTabaxi.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTriton.js"></script>
@@ -263,11 +270,6 @@
 	<script src="scripts/names/generateRandomGender.js"></script>
 	<script src="scripts/names/generateRandomRace.js"></script>
 	<script src="scripts/names/generateRandomRegion.js"></script>
-
-	<!-- Misc scripts -->
-	<script src="scripts/names/addNameDescription.js"></script>
-	<script src="scripts/interface/eventListener.js"></script>
-	<script src="scripts/getRandomElement.js"></script>
 
 	<!--Scripts of syllables for names -->
 	<script src="scripts/names/syllables_name/dragonbornNameSyllables.js"></script>
@@ -288,6 +290,7 @@
 	<script src="scripts/names/syllables_name/goliathNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/grungNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/kalashtarNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/warforgedNamesSyllables.js"></script>
 	<script src="scripts/names/syllables_name/kenkuNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tabaxiNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tritonNameSyllables.js"></script>
