Added Leonin as a selectable race

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 							<option id="hobgoblin">Hobgoblin</option>
 							<option id="kalasthar">Kalashtar</option>
 							<option id="warforged">Kriegsgeschmiedeter</option>
+							<option id="leonin">Leonid</option>
 							<option id="kenku">Kenku</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
@@ -174,6 +175,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameKalashtar.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameWarforged.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameGrung.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameLeoninFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameLeoninMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameLeoninNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -260,6 +264,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameKalashtar.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameWarforged.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameKenku.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameLeonin.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTabaxi.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTriton.js"></script>
 
@@ -294,6 +299,7 @@
 	<script src="scripts/names/syllables_name/kenkuNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tabaxiNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tritonNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/leoninNameSyllables.js"></script>
 
 </body>
 
