Added Loxodon as selectable race

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 							<option id="kalasthar">Kalashtar</option>
 							<option id="warforged">Kriegsgeschmiedeter</option>
 							<option id="leonin">Leonid</option>
+							<option id="loxodon">Loxodon</option>
 							<option id="kenku">Kenku</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
@@ -178,6 +179,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameLeoninFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameLeoninMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameLeoninNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameLoxodonFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameLoxodonMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameLoxodonNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -265,6 +269,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameWarforged.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameKenku.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameLeonin.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameLoxodon.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTabaxi.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTriton.js"></script>
 
@@ -300,6 +305,7 @@
 	<script src="scripts/names/syllables_name/tabaxiNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/tritonNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/leoninNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/loxodonNameSyllables.js"></script>
 
 </body>
 
