--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
 							<option id="grung">Grung</option>
 							<option id="hobgoblin">Hobgoblin</option>
 							<option id="kalasthar">Kalashtar</option>
+							<option id="kenku">Kenku</option>
 							<option id="warforged">Kriegsgeschmiedeter</option>
 							<option id="leonin">Leonid</option>
 							<option id="loxodon">Loxodon</option>
-							<option id="kenku">Kenku</option>
+							<option id="minotaur">Minotaurus</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
 						</select>
@@ -182,6 +183,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameLoxodonFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameLoxodonMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameLoxodonNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameMinotaurFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameMinotaurMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameMinotaurNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -270,6 +274,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameKenku.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameLeonin.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameLoxodon.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameMinotaur.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTabaxi.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTriton.js"></script>
 
@@ -306,6 +311,7 @@
 	<script src="scripts/names/syllables_name/tritonNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/leoninNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/loxodonNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/minotaurNameSyllables.js"></script>
 
 </body>
 
