Added Orcs as a selectable race

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 							<option id="leonin">Leonid</option>
 							<option id="loxodon">Loxodon</option>
 							<option id="minotaur">Minotaurus</option>
+							<option id="orc">Ork</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
 						</select>
@@ -186,6 +187,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameMinotaurFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameMinotaurMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameMinotaurNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameOrcFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameOrcMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameOrcNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -312,6 +316,7 @@
 	<script src="scripts/names/syllables_name/leoninNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/loxodonNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/minotaurNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/orcNameSyllables.js"></script>
 
 </body>
 
