Added Vedalken as selectable race

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 							<option id="orc">Ork</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
+							<option id="vedalken">Vedalken</option>
 						</select>
 					</div>
 				</div>
@@ -190,6 +191,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameOrcFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameOrcMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameOrcNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameVedalkenFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameVedalkenMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameVedalkenNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -281,6 +285,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameMinotaur.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTabaxi.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTriton.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameVedalken.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -317,6 +322,7 @@
 	<script src="scripts/names/syllables_name/loxodonNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/minotaurNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/orcNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/vedalkenNameSyllables.js"></script>
 
 </body>
 
