Added Simic Hybrid as selectable race

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 							<option id="loxodon">Loxodon</option>
 							<option id="minotaur">Minotaurus</option>
 							<option id="orc">Ork</option>
+							<option id="simicHybrid">Simic-Hybrid</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
 							<option id="vedalken">Vedalken</option>
