Added Harengon as selectable race

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 							<option id="goliath">Goliath</option>
 							<option id="bugbear">Grottenschrat</option>
 							<option id="grung">Grung</option>
+							<option id="harengon">Harengon</option>
 							<option id="hobgoblin">Hobgoblin</option>
 							<option id="kalasthar">Kalashtar</option>
 							<option id="kenku">Kenku</option>
@@ -195,6 +196,7 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameVedalkenFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameVedalkenMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameVedalkenNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameHarengon.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -287,6 +289,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameTabaxi.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameTriton.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameVedalken.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameHarengon.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -324,6 +327,8 @@
 	<script src="scripts/names/syllables_name/minotaurNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/orcNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/vedalkenNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/harengonNameSyllables.js"></script>
+
 
 </body>
 
