Added more elven subraces (astral elf, drow, eladrin, pallid elf, sea elf, shadar-kai)

--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
 							<option id="tiefling">Tiefling</option>
 							<option id="aasimar">Aasimar</option>
 							<option id="aarakocra">Aarakocra</option>
+							<option id="astralElf">Astralelf</option>
+							<option id="paleElf">Blasself</option>
 							<option id="duergar">Duergar</option>
+							<option id="drow">Drow</option>
 							<option id="lizardfolk">Echsenmensch</option>
+							<option id="eladrin">Eladrin</option>
 							<option id="firbolg">Firbolg</option>
 							<option id="githyanki">Githyanki</option>
 							<option id="githzerai">Githzerai</option>
@@ -62,8 +66,10 @@
 							<option id="warforged">Kriegsgeschmiedeter</option>
 							<option id="leonin">Leonid</option>
 							<option id="loxodon">Loxodon</option>
+							<option id="seaElf">Meereself</option>
 							<option id="minotaur">Minotaurus</option>
 							<option id="orc">Ork</option>
+							<option id="shadar-kai">Schadar-Kai</option>
 							<option id="simicHybrid">Simic-Hybrid</option>
 							<option id="tabaxi">Tabaxi</option>
 							<option id="triton">Triton</option>
