Added Deep Gnome as a selectable race

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 							<option id="shadar-kai">Schadar-Kai</option>
 							<option id="simicHybrid">Simic-Hybrid</option>
 							<option id="tabaxi">Tabaxi</option>
+							<option id="deepGnomes">Tiefengnom</option>
 							<option id="triton">Triton</option>
 							<option id="vedalken">Vedalken</option>
 						</select>
@@ -203,6 +204,9 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameVedalkenMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameVedalkenNonBinary.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHarengon.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameDeepGnomeFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameDeepGnomeMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameDeepGnomeNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -296,6 +300,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameTriton.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameVedalken.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHarengon.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameDeepGnome.js"></script>
 
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
@@ -334,7 +339,7 @@
 	<script src="scripts/names/syllables_name/orcNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/vedalkenNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/harengonNameSyllables.js"></script>
-
+	<script src="scripts/names/syllables_name/deepGnomeNameSyllables.js"></script>
 
 </body>
 
