Added Fairy as a selectable race

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 							<option id="drow">Drow</option>
 							<option id="lizardfolk">Echsenmensch</option>
 							<option id="eladrin">Eladrin</option>
+							<option id="fairy">Fee</option>
 							<option id="firbolg">Firbolg</option>
 							<option id="githyanki">Githyanki</option>
 							<option id="githzerai">Githzerai</option>
@@ -301,7 +302,7 @@
 	<script src="scripts/names/last_name/generateRandomLastNameVedalken.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameHarengon.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameDeepGnome.js"></script>
-
+	<script src="scripts/names/last_name/generateRandomLastNameFairy.js"></script>
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
 	<script src="scripts/names/generateLastName.js"></script>
@@ -340,6 +341,7 @@
 	<script src="scripts/names/syllables_name/vedalkenNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/harengonNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/deepGnomeNameSyllables.js"></script>
+	<script src="scripts/names/syllables_name/fairyNamesSyllables.js"></script>
 
 </body>
 
