Added Genasi subraces as selectable races

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 							<option id="eladrin">Eladrin</option>
 							<option id="fairy">Fee</option>
 							<option id="firbolg">Firbolg</option>
+							<option id="earthGenasi">Erdgenasi</option>
+							<option id="fireGenasi">Feuergenasi</option>
+							<option id="airGenasi">Luftgenasi</option>
+							<option id="waterGenasi">Wassergenasi</option>
 							<option id="githyanki">Githyanki</option>
 							<option id="githzerai">Githzerai</option>
 							<option id="goblin">Goblin</option>
@@ -208,6 +212,18 @@
 	<script src="scripts/names/first_name/generateRandomFirstNameDeepGnomeFemale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameDeepGnomeMale.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameDeepGnomeNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiAirFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiAirMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiAirNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiEarthFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiEarthMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiEarthNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiFireFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiFireMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiFireNonBinary.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiWaterFemale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiWaterMale.js"></script>
+	<script src="scripts/names/first_name/generateRandomFirstNameGenasiWaterNonBinary.js"></script>
 
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleArabic.js"></script>
 	<script src="scripts/names/first_name/generateRandomFirstNameHumanMaleBantu.js"></script>
@@ -303,6 +319,11 @@
 	<script src="scripts/names/last_name/generateRandomLastNameHarengon.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameDeepGnome.js"></script>
 	<script src="scripts/names/last_name/generateRandomLastNameFairy.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameGenasiAir.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameGenasiEarth.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameGenasiFire.js"></script>
+	<script src="scripts/names/last_name/generateRandomLastNameGenasiWater.js"></script>
+
 	<!--Scripts for race, gender, region, name, first name and last name generation-->
 	<script src="scripts/names/generateFirstName.js"></script>
 	<script src="scripts/names/generateLastName.js"></script>
@@ -342,7 +363,7 @@
 	<script src="scripts/names/syllables_name/harengonNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/deepGnomeNameSyllables.js"></script>
 	<script src="scripts/names/syllables_name/fairyNamesSyllables.js"></script>
-
+	<script src="scripts/names/syllables_name/genasiNameSyllables.js"></script>
 </body>
 
 </html>
