--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/custom.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -44,6 +44,9 @@
 							<option id="halfOrc">Halbork</option>
 							<option id="dragonborn">Drachenblütiger</option>
 							<option id="tiefling">Tiefling</option>
+							<option disabled style="font-size: 0.25em;"></option>
+							<option disabled style="background: #c9c9c9; font-size: 0.1px; max-width: 80%;"></option>
+							<option disabled style="font-size: 0.25em;"></option>
 							<option id="aasimar">Aasimar</option>
 							<option id="aarakocra">Aarakocra</option>
 							<option id="astralElf">Astralelf</option>
